...
"home_menu_send_title" = "Send";
"home_menu_send_subtitle" = "send BLOC instantly";
"home_menu_transactions_title" = "Transactions";
"home_menu_transactions_subtitle" = "check your transactions";
"home_menu_about_title" = "About";
"home_menu_about_subtitle" = "more about us";
"tabs_wallet" = "WALLET";
"tabs_mining" = "MINING";
"tabs_send" = "SEND";
"tabs_transactions" = "TRANSACT.";
"wallet_list_item_title" = "Wallet #%d";
"wallet_list_item_balance" = "Total balance: %@";
"wallet_list_no_wallet_title" = "You have no wallet for now";
"wallet_list_no_wallet_instructions" = "You need to create a new wallet or import a wallet using your private key or a QR code";
"wallet_list_no_wallet_create" = "Create a new wallet";
...
