...
        let details = WalletDetails(availableBalance: 631000.0, lockedBalance: 0.0, address: myAddress, transactions: [ transactionA, transactionB, transactionC, transactionD, transactionE ])
        
        let wallet = Wallet(uuid: UUID(),
                            keyPair: KeyPair(seed: try! Seed()),
                            address: myAddress,
                            password: "tests",
                            name: "My Wallet",
                            details: details,
                            createdAt: Date())
        
        return wallet
    }
    
...
