...
        textView.placeholderTextColor = UIColor.white.withAlphaComponent(0.5)
        textView.font = .regular(size: 12.5)
        textView.textColor = .white
        textView.textContainerInset = UIEdgeInsets(top: 10.0, left: 0.0, bottom: 0.0, right: 0.0)
        textView.textAlignment = .center
        textView.backgroundColor = .clear
        textView.accessibilityLabel = "Recipient address"
        return textView
    }()
    
    let paymentIDSeparatorView: UIView = {
        let view = UIView()
        view.backgroundColor = UIColor(patternImage: R.image.separatorDash()!)
...
